PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-94_somme_invalide3/gcc-compile.txt
input.c:3:13: error: expected expression
    return +;
            ^
1 error generated.

return code: 1
